# dzeta-agi

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md  evaluate_baselines.py  inspect_model.cpp  train_smoke.cpp
benchmarks/logs/: 2026-06-28-adaptive-contrastive-10min.md  2026-06-28-adaptive-contrastive-10min.raw.txt  2026-06-28-tinystories-10min.err.txt  2026-06-28-tinystories-10min.md  2026-06-28-tinystories-10min.raw.txt  2026-06-29-dim9000-stochastic-10min-safe.err.txt  2026-06-29-dim9000-stochastic-10min-safe.out.txt  2026-06-29-dim9000-stochastic-500lines-inspect.txt  2026-06-29-dim9000-stochastic-500lines.err.txt  2026-06-29-dim9000-stochastic-500lines.out.txt  2026-06-29-dim9000-stochastic-inspect-content.txt  2026-06-29-dim9000-stochastic-inspect.txt
docs/experiments/: 2026-06-29-dim-interference-antitemplate.md  2026-06-29-dim9000-500lines.md  2026-06-29-dim9000-stochastic.md  2026-06-29-hf-mixed-corpus.md  2026-06-30-prompt-anchor-deflation.md  2026-07-16-gpcc-qpa-concept-condensation.md  README.md
src/: adaptive_tokenizer.h  sat.h  token_field.h
src/dzeta/: adaptive_tokenizer.h  agi_benchmark.h  agi_continuous_learning.h  agi_foundry.h  agi_super_train.h  amnesia.h  analogy_field.h  broca.h  causal_field.h  cloud.h  code_memory.h  code_snippet_memory.h  code_verifier.h  coherence_graph.h  concept_dictionary.h  cpu_accel.h  demo_runner.h  differentiable_field.h  dissipative_adaptation.h  dzeta_vm.h  entropy.h  entropy_singularity.h  executive.h  fast_core.h  field_objectives.h  field_optimizer.h  field_reasoning.h  field_state.h  global_workspace.h  handle.h  information.h  iutt.h  kerner.h  kummer.h  langlands.h  latent_field_space.h  math_learning.h  mentalese_core.h  module_router.h  morphogenesis.h  (+21 more)
tests/: learning.cpp  parallel.cpp  persistence.cpp  prompt_deflation.cpp  smoke.cpp  stochastic.cpp  tokenizer.cpp
tools/: build_mixed_hf_corpus.py  fetch_hf_text_sample.py  generate_mermaid_graph.py
